--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "formik": "^2.2.9",
+    "react-hot-toast": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
